--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,9 +1,104 @@
-@import 'reset/reset', 'reset/keyframes', 'reset/mixins';
+@import 'reset/reset', 'reset/keyframes', 'reset/mixins', 'reset/variables';
 
 * {
     font-family: 'Montserrat', sans-serif;
 }
-.section {
+.boton {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #FE90AF;
+    position: fixed;
+    cursor: pointer;
+    z-index: 3;
+    right: 2%;
+    top: 8%;
+}
+.boton .linea1 {
+    width: 20px;
+    height: 2px;
+    background: linear-gradient(to left, 
+    #C6EA8D, #FE90AF);
+    position: absolute;
+    top: calc( 30% - 1px);;
+    left: 20%;
+    transform-origin: right;
+    z-index: 3;
+    transition: all 2s ease;
+    &.activo {
+        transform: rotate(-45deg);
+        background: white;
+    }
+}
+.boton .linea2 {
+    width: 13px;
+    height: 2px;
+    background: linear-gradient(to left, 
+    #C6EA8D, #FE90AF);
+    position: absolute;
+    top: calc( 60% - 4.5px);;
+    left: 20%;
+    transform-origin: right;
+    z-index: 3;
+    transition: all 2s ease;
+    &.activo {
+        transform: rotate(45deg);
+        background: white;
+    }
+}
+.boton .linea3 {
+    width: 7px;
+    height: 2px;
+    background: linear-gradient(to left, 
+    #C6EA8D, #FE90AF);
+    position: absolute;
+    top: calc( 90% - 9px);
+    right: 25%;
+    z-index: 3;
+    transition: all 2s ease;
+    &.activo {
+        transform: rotate(45deg);
+        background: white;
+    }
+}
+.cortinilla {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    transition: 1s all ease;
+    z-index: 1;
+    opacity: 0;
+    right: 0;
+    top: 0;
+    background: rgb(25, 25, 60);
+    pointer-events: none;
+    &.activo {
+        opacity: 1;
+        pointer-events: auto;
+    }
+}
+.menucortina {
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
+    @include flex( row , nowrap , center , center );
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 1s all ease;
+    &.activo {
+        opacity: 1;
+    }
+}
+.menucortina .li {
+    font-size: 3em;
+    // margin: 1em;
+    list-style-type: none;
+    background: linear-gradient(to left, 
+    #C6EA8D, #FE90AF);
+    -webkit-background-clip: text;
+     color: transparent;
+}
+.section.uno {
     height: 100vh;
     width: 100%;
     background: linear-gradient(to right bottom, 
@@ -14,22 +109,25 @@
     rgb(50, 20, 70),
     rgb(70, 25, 75),
     rgb(80, 30, 90));
-    position: relative;
 }
 .mainpage {
     @include flex( column, wrap, center, center);
 }
 .h1 {
-    color: white;
+    color: var(--colortexto);
     font-size: 2.8em;
     font-weight: 600;
     position: absolute;
     top: 45%;
 }
 .puesto {
-    color: white;
+    color: var(--colortexto);
     position: absolute;
     top: 55%;
+}
+.h1, .puesto {
+    animation-name: aparecer;
+    animation-duration: 5s;
 }
 .logo {
     width: 100px;
@@ -37,7 +135,7 @@
     opacity: 0.3;
     top: 35%;
 }
-.cuerpo {
+.section.dos {
     background: linear-gradient(to left bottom,
     rgb(80, 30, 90),
     rgb(70, 25, 75),
@@ -47,90 +145,102 @@
     rgb(6, 6, 30),
     rgb(1, 1, 10));
 }
+.cuerpo {
+    transition: 2s all ease;
+    opacity: 1;
+    transform: translateX(-1000px);
+    &.activo {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
 .works {
     height: 100vh;
-    @include flex ( column, wrap, center, right);
+    @include flex ( column, nowrap, center, right);
 }
 .secciones {
-    width: 100%;
-    @include flex ( row, wrap, space-around, inherit);
-    position: relative;
+    @include flex ( row, wrap, space-around , inherit);
 }
 .nombreseccion { 
-    padding-left: 50px;
-    margin-bottom: 50px;
+    padding-left: var(--marginm);
+    margin-bottom: var(--marginm);
 }
 .nombreseccion .h2 {
     background: linear-gradient(to left, 
     #C6EA8D, #FE90AF);
     -webkit-background-clip: text;
      color: transparent;
-    font-size: 1.5em;
+    font-size: 2em;
     font-weight: 600;
     margin-bottom: 5px;
 }
 .lineasub {
-    width: 150px;
+    width: 0px;
     height: 1px;
     background: linear-gradient(to left, 
     #d74d89, #eb8777, #f1a355);
+    animation-name: crecer;
+    animation-delay: 2s;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
 }
 .tarjeta {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    position: relative;
+    width: 180px;
+    height: 180px;
+    border-radius: var(--circulo);
     cursor: pointer;
+    @include flex ( column, nowrap, space-around, center);
+    transition: .4s all ease;
+    &:hover {
+        width: 190px;
+        height: 190px;
+    }
+}
+.tarjeta .h3 {
+    color: var(--colortexto);
+    font-size: 1.5em;
+    font-weight: 600;
+    text-align: center;
+    transition: .7s all ease;
+    &:hover {
+        color: rgb(25, 25, 60);;
+    }
 }
 .tarjeta.uno {
     background: linear-gradient(to right, 
     #541447, #dd89ad, #61529f);
     box-shadow:  1px 1px 3px #61529f,
                 -3px -3px 10px #541447;
-    background-size: 500%;
+    background-size: var(--bgsize);
     animation: background-mov 3s infinite alternate;
-    margin-bottom: 50px;      
+    margin-bottom: var(--marginm);      
 }
 .tarjeta.dos {
     background: linear-gradient(to left, 
     #d74d89, #eb8777, #f1a355);
     box-shadow:  1px 1px 4px #eb8777,
                 -3px -3px 10px #d74d89;
-    background-size: 500%;
+    background-size: var(--bgsize);
     animation: background-mov 3s infinite alternate;
-    margin-bottom: 50px;    
+    margin-bottom: var(--marginm);    
 }
 .tarjeta.tres {
     background: linear-gradient(to left top, 
     #36569c, #5d8dca, #825a9b);
     box-shadow:  1px 1px 4px #5d8dca,
                 -3px -3px 10px #36569c;
-    background-size: 500%;
+    background-size: var(--bgsize);
     animation: background-mov 3s infinite alternate;
-    margin-bottom: 50px;    
+    margin-bottom: var(--marginm);    
 }
 .tarjeta.cuatro {
     background: linear-gradient(to right bottom, 
     #3e2763, #dd2e5d, #ebb278);
     box-shadow:  1px 1px 4px #dd2e5d,
                 -3px -3px 10px #3e2763;
-    background-size: 500%;
+    background-size: var(--bgsize);
     animation: background-mov 3s infinite alternate;
-    margin-bottom: 50px;    
-}
-.h3 {
-    color: white;
-    font-size: 1em;
-    position: absolute;
-    top: 30%;
-    font-weight: 400;
-    text-align: center;
-}
-.tarjeta .h3 {
-    opacity: 1;
-    &.activo {
-        opacity: 0;
-    }
+    margin-bottom: var(--marginm);    
 }
 .foot {
     height: 100vh;
@@ -142,7 +252,7 @@
     rgb(50, 20, 70),
     rgb(70, 25, 75),
     rgb(80, 30, 90));
-    @include flex ( column, wrap, space-evenly, center )
+    @include flex ( column, nowrap, space-evenly, center )
 }
 .about {
     @include flex ( row, wrap, center, center ) 
@@ -152,7 +262,7 @@
     padding-left: 20px;
 }
 .infopersonal .p:first-child {
-    color: white;
+    color: var(--colortexto);
     font-size: 0.7em;
     line-height: 30px;
 }
@@ -169,16 +279,30 @@
     height: 225px;
 }
 .img img {
-    border-radius: 50%;
+    border-radius: var(--circulo);
 }
 .cincuenta {
     width: 50%;
     @include flex ( row, nowrap, center, baseline )
 }
+.cincuenta.uno {
+    opacity: 0;
+    transition: 3s all ease;
+    &.activo {
+        opacity: 1;
+    }
+}
+.cincuenta.dos {
+    opacity: 0;
+    transition: 2s all ease;
+    &.activo {
+        opacity: 1;
+    }
+}
 .rrss {
     text-align: center;
 }
-.fab {
+.iconos .fab {
     font-size: 1.5em;
     padding-right: 20px;
     cursor: pointer;
@@ -187,7 +311,7 @@
     -webkit-background-clip: text;
      color: transparent;
 }
-.fab:hover {
+.iconos .fab:hover {
     background: linear-gradient(to left, 
     #36569c, #5d8dca, #825a9b);
     -webkit-background-clip: text;
@@ -195,6 +319,7 @@
 }
 .iconos {
     margin-bottom: 20px;
+    @include flex ( row, wrap, center, center)
 }
 .rrss .email {
     background: linear-gradient(to left, 
@@ -206,85 +331,7 @@
     cursor: pointer;
 }
 .rrss .p {
-    color: white;
+    color: var(--colortexto);
     font-size: 0.7em;
     margin-bottom: 10px;
 }
-// .desplegado{
-//     height: 100vh;
-//     background: linear-gradient(to right bottom, 
-//     rgb(1, 1, 10),
-//     rgb(6, 6, 30),
-//     rgb(8, 8, 50), 
-//     rgb(25, 25, 60), 
-//     rgb(50, 20, 70),
-//     rgb(70, 25, 75),
-//     rgb(80, 30, 90));
-//     @include flex ( row, wrap, space-evenly, center);
-//     position: relative;
-// }
-// .desplegado .img{
-//     cursor: pointer;
-//     transition: all .5s ease;
-//     transform: scale(.9);
-//     border-radius: 10%;
-//     &:hover{
-//         transform: scale(1);
-//     }
-// }
-// .lightbox{
-//     width: 100%;
-//     height: 100%;
-//     background: rgb(70, 25, 75, 0.8);
-//     backdrop-filter: blur(1em);
-//     position: fixed;
-//     top:0;
-//     left:0;
-//     z-index: 1;
-//     @include flex( column , nowrap , center , center );
-//     transition: all .5s ease;
-//     opacity: 0;
-//     pointer-events: none;
-
-//     &.activo{
-//         opacity: 1;
-//         pointer-events: auto;
-//     }
-// }
-// .lightbox .button {
-//     width:1.5em;
-//     height:1.5em;
-//     font-size: 4em;
-//     transform: rotate(45deg);
-//     cursor: pointer;
-//     transition: all .5s ease;
-//     transform: rotate(45deg) scale(1);
-//     background: linear-gradient(to left, 
-//     #C6EA8D, #FE90AF);
-//     -webkit-background-clip: text;
-//      color: transparent;
-//     &:hover{
-//         transform: rotate(45deg) scale(.9);
-//     }
-// }
-// .desplegado .button {
-//     width:1.5em;
-//     height:1.5em;
-//     font-size: 4em;
-//     background: linear-gradient(to left, 
-//     #36569c, #5d8dca, #825a9b);
-//     -webkit-background-clip: text;
-//      color: transparent;
-//      transform: rotate(45deg);
-//      cursor: pointer;
-//      position: absolute;
-//     //  top: 0;
-//     //  right: 0;
-//      z-index: 1;
-// }
-// .lightbox .img{
-//     width:90%;
-//     max-width: 80em;
-//     height: 70vh;
-//     object-fit: contain;
-// }
