--- a/scss/reset/keyframes.scss
+++ b/scss/reset/keyframes.scss
@@ -6,3 +6,19 @@
         background-position: right;
     }
 }
+@keyframes aparecer {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes crecer {
+    0% {
+        width: 0px;
+    }
+    100% {
+        width: 150px;
+    }
+}
